--- a/Virtus/UserControls/Product/LabelsUserControl.xaml
+++ b/Virtus/UserControls/Product/LabelsUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Virtus.ProducsUserControl"
+﻿<UserControl x:Class="Virtus.LabelsUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="Products user control" FontSize="42" VerticalAlignment="Center"
-                       HorizontalAlignment="Center" />
+        <TextBlock Text="Labels" />
     </Grid>
 </UserControl>
