--- a/Virtus/UserControls/WorkOrderUserControl.xaml
+++ b/Virtus/UserControls/WorkOrderUserControl.xaml
@@ -6,8 +6,25 @@
              xmlns:local="clr-namespace:Virtus"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    
+    <UserControl.DataContext>
+        <local:WorkOrderViewModel />
+    </UserControl.DataContext>
+
     <Grid>
-        <TextBlock Text="Work Order user control" FontSize="42" VerticalAlignment="Center"
-                       HorizontalAlignment="Center" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <local:SubMenuUserControl />
+
+        <!--#region Content-->
+        <ContentControl Grid.Row="1" 
+                        Grid.Column="1" 
+                        Margin="15,15,0,0"
+                        Content="{Binding WorkOrderContent, Converter={local:WorkOrderPageValueConverter}}" />
+        <!--#endregion-->
+
     </Grid>
 </UserControl>
