--- a/Virtus/UserControls/InventoryUserControl.xaml
+++ b/Virtus/UserControls/InventoryUserControl.xaml
@@ -6,8 +6,21 @@
              xmlns:local="clr-namespace:Virtus"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <local:InventoryViewModel />
+    </UserControl.DataContext>
+
     <Grid>
-        <TextBlock Text="Inventory user control" FontSize="42" VerticalAlignment="Center"
-                       HorizontalAlignment="Center" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <local:SubMenuUserControl />
+
+        <ContentControl Grid.Row="1" 
+                        Grid.Column="1" 
+                        Margin="15,15,0,0"
+                        Content="{Binding InventoryContent, Converter={local:InventoryPageValueConverter}}" />
     </Grid>
 </UserControl>
